latest backend added update profile, change password and logout